Add Alice as speaker, add .editorconfig

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -92,9 +92,30 @@
         <div class="✨">
           <h2>Speakers</h2>
           <p>If you’re interested in giving a talk <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
-          <!-- <p>We’re very grateful to our speakers:</p> -->
+          <p>We’re very grateful to our speakers:</p>
 
-          <p>No speakers have been announced yet.</p>
+          <ul class="👥 📢">
+            <li>
+              <a href="https://twitter.com/sundress">
+                <img src="/images/speakers/Alice.jpg" alt="">
+                <div>
+                  <span>Alice Boxhall</span>
+                  <i>Google</i>
+                </div>
+              </a>
+              <p>Alice will introduce us to the Accessibility Object Model (AOM) <span role="img" aria-label="sparkling star">🌟</span>.</p>
+            </li>
+            <li>
+              <a href="https://twitter.com/matatk">
+                <img src="/images/speakers/Matt.jpg" alt="">
+                <div>
+                  <span>Matthew Tylee Atkinson</span>
+                  <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+              <p>Matthew has chartered some of our time to talk about charts and how to make them accessible to people with vision impairments.</p>
+            </li>
+          </ul>
         </div>
       </section>
 
@@ -103,7 +124,24 @@
           <h2>Attendees</h2>
           <p>If you want to yak about accessibility, sign up!</p>
 
-          <p>No attendees yet.</p>
+          <ul class="👥">
+            <li>
+              <div>
+                <img src="/images/attendees/Renske-Bijl.jpg" alt="">
+                <div>
+                  <span>Renske Bijl</span>
+                </div>
+              </div>
+            </li>
+            <li>
+              <a href="https://twitter.com/vitallie">
+                <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
+                <div>
+                  <span>Vincent van Itallie</span>
+                </div>
+              </a>
+            </li>
+          </ul>
         </div>
       </section>
 
