Add bunch of people

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -105,6 +105,7 @@
               </a>
               <p>Alice will introduce us to the Accessibility Object Model (AOM) <span role="img" aria-label="sparkling star">🌟</span>.</p>
             </li>
+
             <li>
               <a href="https://twitter.com/matatk">
                 <img src="/images/speakers/Matt.jpg" alt="">
@@ -114,6 +115,27 @@
                 </div>
               </a>
               <p>Matthew has chartered some of our time to talk about charts and how to make them accessible to people with vision impairments.</p>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/bramduvigneau">
+                <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
+                <div>
+                  <span>Bram Duvigneau</span>
+                  <i>Firm Ground</i>
+                </div>
+              </a>
+              <p>Probably something about PDFs, so get excited for that!</p>
+            </li>
+
+            <li>
+              <div>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>The Unicorn &amp; The Dinosaur: The Talk</span>
+                </div>
+              </div>
+              <p>JavaScript vs. Accessibility</p>
             </li>
           </ul>
         </div>
@@ -126,6 +148,56 @@
 
           <ul class="👥">
             <li>
+              <a href="https://twitter.com/handcoding">
+                <img src="/images/attendees/Ashley-Bischoff.jpeg" alt="">
+                <div>
+                  <span>Ashley Bischoff</span>
+                  <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/bramduvigneau">
+                <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
+                <div>
+                  <span>Bram Duvigneau</span>
+                  <i>Firm Ground</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/deanbirkett">
+                <img src="/images/speakers/Dean.jpg" alt="">
+                <div>
+                  <span>Dean Birkett</span>
+                  <i>AssistiveWare</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/detonite">
+                <img src="/images/speakers/Job.jpg" alt="">
+                <div>
+                  <span>Job van Achterberg</span>
+                  <i>3ode</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/stommepoes">
+                <img src="/images/attendees/Mallory.jpg" alt="">
+                <div>
+                  <span>Mallory van Achterberg</span>
+                  <i>¯\_(ツ)_/¯</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/attendees/Renske-Bijl.jpg" alt="">
                 <div>
@@ -133,6 +205,43 @@
                 </div>
               </div>
             </li>
+
+            <li>
+              <a href="https://twitter.com/rodneyrehm">
+                <img src="/images/attendees/Rodney-Rehm.jpeg" alt="">
+                <div>
+                  <span>Rodney Rehm</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/TimLuig">
+                <img src="/images/attendees/Tim-Luigjes.jpg" alt="">
+                <div>
+                  <span>Tim Luigjes</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/tim_roes">
+                <img src="/images/attendees/Tim-Roes.jpg" alt="">
+                <div>
+                  <span>Tim Roes</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/bestebreurtje">
+                <img src="/images/attendees/Tom-Bestebreurtje.jpg" alt="">
+                <div>
+                  <span>Tom Bestebreurtje</span>
+                </div>
+              </a>
+            </li>
+
             <li>
               <a href="https://twitter.com/vitallie">
                 <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
@@ -160,6 +269,7 @@
           <ul class="💰">
             <li><a href="https://fronteers.nl"><img src="/images/sponsors/fronteers.svg" alt="Fronteers"></a></li>
             <li><a href="https://cssday.nl"><img src="/images/sponsors/cssday.png" alt="CSS Day"></a></li>
+            <li><a href="https://www.elastic.co"><img src="/images/sponsors/elastic.svg" alt="Elastic"></a></li>
           </ul>
         </div>
       </section>
