Add Emma as speaker

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -95,7 +95,7 @@
           <p>We’re very grateful to our speakers:</p>
 
           <ul class="👥 📢">
-            <li>
+            <!-- <li>
               <a href="https://twitter.com/sundress">
                 <img src="/images/speakers/Alice.jpg" alt="">
                 <div>
@@ -104,6 +104,16 @@
                 </div>
               </a>
               <p>Alice will introduce us to the Accessibility Object Model (AOM) <span role="img" aria-label="sparkling star">🌟</span>.</p>
+            </li> -->
+
+            <li>
+              <a href="https://twitter.com/reridley">
+                <img src="/images/speakers/Emma.jpeg" alt="">
+                <div>
+                  <span>Emma Ridley</span>
+                </div>
+              </a>
+              <p>Accessibility training for remote developers.</p>
             </li>
 
             <li>
@@ -198,6 +208,16 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/MichielBijl">
+                <img src="/images/speakers/Michiel.jpg" alt="">
+                <div>
+                  <span>Michiel Bijl</span>
+                  <i>Funda</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/attendees/Renske-Bijl.jpg" alt="">
                 <div>
@@ -211,6 +231,7 @@
                 <img src="/images/attendees/Rodney-Rehm.jpeg" alt="">
                 <div>
                   <span>Rodney Rehm</span>
+                  <i>Deutsche Telekom</i>
                 </div>
               </a>
             </li>
@@ -238,6 +259,7 @@
                 <img src="/images/attendees/Tom-Bestebreurtje.jpg" alt="">
                 <div>
                   <span>Tom Bestebreurtje</span>
+                  <i>Funda</i>
                 </div>
               </a>
             </li>
