--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -74,7 +74,7 @@
           <p>
             <strong>So when is it?</strong> Saturday October 7th, 2017 👌🏾.<br>
             <strong>Cool 🙌🏼  When are we expected?</strong> It runs from 14:00 to 18:00. Dinner afterwards is an option, or we can move to imbibe elsewhere.<br>
-            <strong>Where is it 🤔?</strong> <a href="http://www.cafebatavia.nl">Café Batavia</a>, Prins Hendrikkade 85, Amsterdam 🍻<br>
+            <strong>Where is it 🤔?</strong> <a href="http://cafevrijdagamsterdam.nl/">Café Vrijdag</a>, Amsteldijk 137, Amsterdam 🍻<br>
             <strong>Costs?</strong> We will cover the venue, some snacks, and drinks up to a certain amount 👍🏿.
           </p>
 
