Add a bunch of people

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -158,6 +158,15 @@
 
           <ul class="👥">
             <li>
+              <a href="https://twitter.com/designbypxlgirl">
+                <img src="/images/attendees/pxlgirl.jpg" alt="">
+                <div>
+                  <span>Agnieszka “pxlgirl” Czajkowska</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/handcoding">
                 <img src="/images/attendees/Ashley-Bischoff.jpeg" alt="">
                 <div>
@@ -168,11 +177,30 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/AshKyd">
+                <img src="/images/attendees/Ash-Kyd.jpg" alt="">
+                <div>
+                  <span>Ash Kyd</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/bramduvigneau">
                 <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
                 <div>
                   <span>Bram Duvigneau</span>
                   <i>Firm Ground</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/Danichan_webdev">
+                <img src="/images/attendees/Daniel-Koster.jpg" alt="">
+                <div>
+                  <span>Daniel Koster</span>
+                  <i>My1stWebsite</i>
                 </div>
               </a>
             </li>
@@ -193,6 +221,25 @@
                 <div>
                   <span>Job van Achterberg</span>
                   <i>3ode</i>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/johannes_reuter">
+                <img src="/images/attendees/Johannes-Reuter.jpg" alt="">
+                <div>
+                  <span>Johannes Reuter</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/JulezRulez">
+                <img src="/images/attendees/Jules-Ernst.jpg" alt="">
+                <div>
+                  <span>Jules Ernst</span>
+                  <i>200OK</i>
                 </div>
               </a>
             </li>
@@ -237,6 +284,15 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/tanja_uli">
+                <img src="/images/attendees/Tanja-Ulianova.jpg" alt="">
+                <div>
+                  <span>Tanja Ulianova</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/TimLuig">
                 <img src="/images/attendees/Tim-Luigjes.jpg" alt="">
                 <div>
@@ -269,6 +325,16 @@
                 <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
                 <div>
                   <span>Vincent van Itallie</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/wilcofiers">
+                <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
+                <div>
+                  <span>Wilco Fiers</span>
+                  <i>Deque</i>
                 </div>
               </a>
             </li>
