Add Martin Splitt

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -255,6 +255,25 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/g33konaut">
+                <img src="/images/attendees/Martin-Splitt.jpg" alt="">
+                <div>
+                  <span>Martin Splitt</span>
+                </div>
+              </a>
+            </li>
+
+            <li>
+              <a href="https://twitter.com/matatk">
+                <img src="/images/speakers/Matt.jpg" alt="">
+                <div>
+                  <span>Matthew Tylee Atkinson</span>
+                  <i><abbr title="The Paciello Group">TPG</abbr></i>
+                </div>
+              </a>
+            </li>
+
+            <li>
               <a href="https://twitter.com/MichielBijl">
                 <img src="/images/speakers/Michiel.jpg" alt="">
                 <div>
