Add Mallory as speaker, add Ran

--- a/in/amsterdam/2017-10-07.html
+++ b/in/amsterdam/2017-10-07.html
@@ -139,6 +139,17 @@
             </li>
 
             <li>
+              <a href="https://twitter.com/stommepoes">
+                <img src="/images/attendees/Mallory.jpg" alt="">
+                <div>
+                  <span>Mallory van Achterberg</span>
+                  <i>¯\_(ツ)_/¯</i>
+                </div>
+              </a>
+              <p>Mallory will rant about icons and labels.</p>
+            </li>
+
+            <li>
               <div>
                 <img src="/images/roledrinks-inverted.png" alt="">
                 <div>
@@ -284,12 +295,13 @@
             </li>
 
             <li>
-              <div>
-                <img src="/images/attendees/Renske-Bijl.jpg" alt="">
+              <a href="https://twitter.com/RianRietveld">
+                <img src="/images/attendees/Rian-Rietveld.jpg" alt="">
                 <div>
-                  <span>Renske Bijl</span>
+                  <span>Rian Rietveld</span>
+                  <i>RRWD Web Development</i>
                 </div>
-              </div>
+              </a>
             </li>
 
             <li>
