Add a code of conduct

--- a/privacy.html
+++ b/privacy.html
@@ -109,7 +109,7 @@
     <footer>
       <div class="✨">
         <p>Built while under the influence of whisky. You can <a href="https://twitter.com/roledrinks">share a drink with us on Twitter</a>.</p>
-        <p>Some things we’ve to say <a href="/privacy.html">about privacy</a>.</p>
+        <p>Some things we’ve to say <a href="/privacy.html">about privacy</a>. Please read our <a href="/code-of-conduct.html">Code of Conduct</a> before you attend.</p>
       </div>
     </footer>
 
