--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -98,19 +98,35 @@
         <h2>Speakers</h2>
         <p>If you’re interested in giving a talk
           <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
+        <p>
+          For this event we have Rachel Nabors as our main event.
+        </p>
+        <p>
+          From vestibular disorders to seizures, animations can have different impacts on a user's experience. Rachel will give a talk
+          on the accessibility challenges surrounding using animations in user interfaces. (She will also have copies of
+          her eBook, Animation at Work, available for signing!)
+        </p>
+        <h3>About Rachel</h3>
+        <p>
+          Rachel Nabors has advocated for interaction designers and developers with the W3C, Mozilla, and Microsoft. She founded the
+          <a href="https://slack.animationatwork.com">Animation at Work community</a> and
+          <a href="https://webanimationweekly.com">weekly newsletter</a>. Recently she wrote an
+          <a href="bkaprt.com/animationatwork">A Book Apart book</a> about how to use all these awesome new animation features to make even better user interfaces.
+        </p>
+        <h3>Speaker list</h3>
         <p>We’re very grateful to our speakers:</p>
 
         <ul class="👥 📢">
-          <!-- <li>
-              <a href="https://twitter.com/sundress">
-                <img src="/images/speakers/Alice.jpg" alt="">
-                <div>
-                  <span>Alice Boxhall</span>
-                  <i>Google</i>
-                </div>
-              </a>
-              <p>Alice will introduce us to the Accessibility Object Model (AOM) <span role="img" aria-label="sparkling star">🌟</span>.</p>
-            </li> -->
+          <li>
+            <a href="https://twitter.com/sundress">
+              <img src="/images/speakers/Rachel.jpg" alt="">
+              <div>
+                <span>Rachel Nabors</span>
+              </div>
+            </a>
+            <p>Animatiosn and accessibility
+              <span role="img" aria-label="sparkling star">🌟</span>.</p>
+          </li>
         </ul>
       </div>
     </section>
