Fix typo, thanks Job

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -124,7 +124,7 @@
                 <span>Rachel Nabors</span>
               </div>
             </a>
-            <p>Animatiosn and accessibility
+            <p>Animations and accessibility
               <span role="img" aria-label="sparkling star">🌟</span>.</p>
           </li>
         </ul>
