Update event page

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -118,7 +118,7 @@
 
         <ul class="👥 📢">
           <li>
-            <a href="https://twitter.com/sundress">
+            <a href="https://twitter.com/rachelnabors">
               <img src="/images/speakers/Rachel.jpg" alt="">
               <div>
                 <span>Rachel Nabors</span>
@@ -139,131 +139,22 @@
         <ul class="👥">
           <li>
             <a href="https://twitter.com/evawesterhoff">
-              <img src="https://pbs.twimg.com/profile_images/614126603950387201/6OYAhlXm_400x400.jpg" alt="">
+              <img src="/images/attendees/Eva-Westerhoff.jpg" alt="">
               <div>
                 <span>Eva Westerhoff</span>
               </div>
             </a>
           </li>
-          <!-- <li>
-            <a href="https://twitter.com/designbypxlgirl">
-              <img src="/images/attendees/pxlgirl.jpg" alt="">
+
+          <li>
+            <a href="https://twitter.com/antao">
+              <img src="/images/attendees/Joao-Antao.jpg" alt="">
               <div>
-                <span>Agnieszka “pxlgirl” Czajkowska</span>
+                <span>João Antão</span>
+                <i>Funda</i>
               </div>
             </a>
           </li>
-
-          <li>
-            <a href="https://twitter.com/handcoding">
-              <img src="/images/attendees/Ashley-Bischoff.jpeg" alt="">
-              <div>
-                <span>Ashley Bischoff</span>
-                <i>
-                  <abbr title="The Paciello Group">TPG</abbr>
-                </i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/AshKyd">
-              <img src="/images/attendees/Ash-Kyd.jpg" alt="">
-              <div>
-                <span>Ash Kyd</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/bramduvigneau">
-              <img src="/images/attendees/Bram-Duvigneau.jpg" alt="">
-              <div>
-                <span>Bram Duvigneau</span>
-                <i>Firm Ground</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/Danichan_webdev">
-              <img src="/images/attendees/Daniel-Koster.jpg" alt="">
-              <div>
-                <span>Daniel Koster</span>
-                <i>My1stWebsite</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/deanbirkett">
-              <img src="/images/speakers/Dean.jpg" alt="">
-              <div>
-                <span>Dean Birkett</span>
-                <i>AssistiveWare</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/detonite">
-              <img src="/images/speakers/Job.jpg" alt="">
-              <div>
-                <span>Job van Achterberg</span>
-                <i>3ode</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/johannes_reuter">
-              <img src="/images/attendees/Johannes-Reuter.jpg" alt="">
-              <div>
-                <span>Johannes Reuter</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/JulezRulez">
-              <img src="/images/attendees/Jules-Ernst.jpg" alt="">
-              <div>
-                <span>Jules Ernst</span>
-                <i>200OK</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/stommepoes">
-              <img src="/images/attendees/Mallory.jpg" alt="">
-              <div>
-                <span>Mallory van Achterberg</span>
-                <i>¯\_(ツ)_/¯</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/g33konaut">
-              <img src="/images/attendees/Martin-Splitt.jpg" alt="">
-              <div>
-                <span>Martin Splitt</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/matatk">
-              <img src="/images/speakers/Matt.jpg" alt="">
-              <div>
-                <span>Matthew Tylee Atkinson</span>
-                <i>
-                  <abbr title="The Paciello Group">TPG</abbr>
-                </i>
-              </div>
-            </a>
-          </li> -->
 
           <li>
             <a href="https://twitter.com/MichielBijl">
@@ -275,81 +166,15 @@
             </a>
           </li>
 
-          <!-- <li>
-            <a href="https://twitter.com/RianRietveld">
-              <img src="/images/attendees/Rian-Rietveld.jpg" alt="">
+          <li>
+            <a href="https://twitter.com/usethetics">
+              <img src="/images/attendees/Rogier-Barendregt.png" alt="">
               <div>
-                <span>Rian Rietveld</span>
-                <i>RRWD Web Development</i>
+                <span>Rogier Barendregt</span>
+                <i>Rg/B Design</i>
               </div>
             </a>
           </li>
-
-          <li>
-            <a href="https://twitter.com/rodneyrehm">
-              <img src="/images/attendees/Rodney-Rehm.jpeg" alt="">
-              <div>
-                <span>Rodney Rehm</span>
-                <i>Deutsche Telekom</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/tanja_uli">
-              <img src="/images/attendees/Tanja-Ulianova.jpg" alt="">
-              <div>
-                <span>Tanja Ulianova</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/TimLuig">
-              <img src="/images/attendees/Tim-Luigjes.jpg" alt="">
-              <div>
-                <span>Tim Luigjes</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/tim_roes">
-              <img src="/images/attendees/Tim-Roes.jpg" alt="">
-              <div>
-                <span>Tim Roes</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/bestebreurtje">
-              <img src="/images/attendees/Tom-Bestebreurtje.jpg" alt="">
-              <div>
-                <span>Tom Bestebreurtje</span>
-                <i>Funda</i>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/vitallie">
-              <img src="/images/attendees/Vincent-van-Itallie.JPG" alt="">
-              <div>
-                <span>Vincent van Itallie</span>
-              </div>
-            </a>
-          </li>
-
-          <li>
-            <a href="https://twitter.com/wilcofiers">
-              <img src="/images/attendees/Wilco-Fiers.jpg" alt="">
-              <div>
-                <span>Wilco Fiers</span>
-                <i>Deque</i>
-              </div>
-            </a>
-          </li> -->
         </ul>
       </div>
     </section>
