--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@roledrinks">
   <meta name="twitter:creator" content="@roledrinks">
-  <meta name="twitter:title" content="role=drinks, June 17th, Amsterdam">
+  <meta name="twitter:title" content="role=drinks, January 22nd, Amsterdam">
   <meta name="twitter:description" content="What on Earth is a role=drinks? It’s an accessibility meet-up with lightning talks and more than enough time to grab a drink.">
-  <meta name="twitter:image" content="http://roledrinks.com/images/twitter/-2017-06-17-amsterdam.jpg">
-  <meta name="twitter:image:alt" content="role=drinks, Amsterdam, June 17th 🍻">
+  <meta name="twitter:image" content="http://roledrinks.com/images/twitter/2018-01-22-amsterdam.png">
+  <meta name="twitter:image:alt" content="role=drinks, Amsterdam, January 22nd 🍻">
 </head>
 
 <body>
