Update attendee list

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -138,12 +138,13 @@
 
         <ul class="👥">
           <li>
-            <a href="https://twitter.com/evawesterhoff">
-              <img src="/images/attendees/Eva-Westerhoff.jpg" alt="">
+            <div>
+              <img src="/images/roledrinks-inverted.png" alt="">
               <div>
-                <span>Eva Westerhoff</span>
+                <span>Arturo Serna Leon</span>
+                <i>Funda</i>
               </div>
-            </a>
+            </div>
           </li>
 
           <li>
@@ -152,6 +153,16 @@
               <div>
                 <span>João Antão</span>
                 <i>Funda</i>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/elnatnal">
+              <img src="/images/attendees/Jonathan-Stephens.jpg" alt="">
+              <div>
+                <span>Jonathan Stephens</span>
+                <i>Booking</i>
               </div>
             </a>
           </li>
@@ -172,6 +183,16 @@
               <div>
                 <span>Rogier Barendregt</span>
                 <i>Rg/B Design</i>
+              </div>
+            </a>
+          </li>
+
+          <li>
+            <a href="https://twitter.com/stephaniecodes">
+              <img src="/images/attendees/Stephanie-Nemeth.jpg" alt="">
+              <div>
+                <span>Stephanie Nemeth</span>
+                <i>Werkspot</i>
               </div>
             </a>
           </li>
