--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -148,6 +148,16 @@
           </li>
 
           <li>
+            <a href="https://twitter.com/firas_assaad">
+              <img src="/images/attendees/Firas-Assaad.jpg" alt="">
+              <div>
+                <span>Firas Assaad</span>
+                <i>Funda</i>
+              </div>
+            </a>
+          </li>
+
+          <li>
             <a href="https://twitter.com/antao">
               <img src="/images/attendees/Joao-Antao.jpg" alt="">
               <div>
