Remove emoji class-names, add accessible emoji

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width">
   <title>Accessibility Meetup: role=drinks | January 22, 2018, Amsterdam</title>
-  <link rel="stylesheet" href="/drinks.css">
+  <link rel="stylesheet" href="/whisky.css">
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@roledrinks">
@@ -20,18 +20,20 @@
   <a href="#main">Skip to content</a>
 
   <header>
-    <div class="✨">
+    <div class="contain">
       <div>
         <h1>
           <a href="/">
-            <svg viewBox="0 0 120 120" class="♿️" aria-label="role=drinks logo">
+            <svg viewBox="0 0 120 120" class="logo" aria-label="role=drinks logo">
               <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#role-drinks"></use>
             </svg>
             role=drinks
           </a>
         </h1>
         <p>We make
-          <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices 🍻</p>
+          <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices
+          <span role="img" aria-label="clanging glasses">🍻</span>
+        </p>
         <p>
           What on Earth is a role=drinks? It’s an accessibility meetup! The event features lightning talks by accessibility specialist,
           time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
@@ -71,17 +73,22 @@
 
   <main id="main">
     <section>
-      <div class="✨">
+      <div class="contain">
         <h2>Details</h2>
         <p>
-          <strong>So when is it?</strong> Monday January 22nd , 2018 👌🏾.
+          <strong>So when is it?</strong> Monday January 22nd , 2018
+          <span role="img" aria-label="ok handsign">👌🏾</span>.
           <br>
-          <strong>Cool 🙌🏼 When are we expected?</strong> It runs from 18:00 to 20:00.
+          <strong>Cool
+            <span role="img" aria-label="hands raised in celebration">🙌🏼</span> When are we expected?</strong> It runs from 18:00 to 20:00.
           <br>
-          <strong>Where is it 🤔?</strong>
-          <a href="https://content.funda.nl/contact">Funda HQ</a>, Piet Heinkade 167, Amsterdam 🍻
+          <strong>Where is it
+            <span role="img" aria-label="thinking face">🤔</span>?</strong>
+          <a href="https://content.funda.nl/contact">Funda HQ</a>, Piet Heinkade 167, Amsterdam
+          <span aria-hidden="true">🍻</span>
           <br>
-          <strong>Costs?</strong> We will cover the venue, some snacks, and drinks 👍🏿.
+          <strong>Costs?</strong> We will cover the venue, some snacks, and drinks
+          <span role="img" aria-label="thumbs up">👍🏿</span>.
         </p>
 
         <p>
@@ -94,7 +101,7 @@
     </section>
 
     <section id="blahblahblah">
-      <div class="✨">
+      <div class="contain">
         <h2>Speakers</h2>
         <p>If you’re interested in giving a talk
           <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
@@ -116,7 +123,7 @@
         <h3>Speaker list</h3>
         <p>We’re very grateful to our speakers:</p>
 
-        <ul class="👥 📢">
+        <ul class="people speakers">
           <li>
             <a href="https://twitter.com/rachelnabors">
               <img src="/images/speakers/Rachel.jpg" alt="">
@@ -132,11 +139,11 @@
     </section>
 
     <section id="fellow-drinkers">
-      <div class="✨">
+      <div class="contain">
         <h2>Attendees</h2>
         <p>If you want to yak about accessibility, sign up!</p>
 
-        <ul class="👥">
+        <ul class="people">
           <li>
             <div>
               <img src="/images/roledrinks-inverted.png" alt="">
@@ -211,7 +218,7 @@
     </section>
 
     <section id="children">
-      <div class="✨">
+      <div class="contain">
         <h2>Code of Conduct</h2>
         <p>
           Please refer to our
@@ -221,10 +228,10 @@
     </section>
 
     <section id="thank-you">
-      <div class="✨">
+      <div class="contain">
         <h2>Who paid for all of this?</h2>
         <p>These people have been kind enough to help us run role=drinks:</p>
-        <ul class="💰">
+        <ul class="sponsors">
           <li>
             <a href="https://funda.nl">
               <img src="/images/sponsors/funda.svg" alt="Funda">
@@ -236,7 +243,7 @@
   </main>
 
   <footer>
-    <div class="✨">
+    <div class="contain">
       <p>Part of
         <a href="http://roledrinks.com">role=drinks</a>.</p>
       <p>Some things we’ve to say
