--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -155,6 +155,16 @@
           </li>
 
           <li>
+            <div>
+              <img src="/images/attendees/Eduardo-Neves.jpg" alt="">
+              <div>
+                <span>Eduardo Neves</span>
+                <i>Funda</i>
+              </div>
+            </div>
+          </li>
+
+          <li>
             <a href="https://twitter.com/firas_assaad">
               <img src="/images/attendees/Firas-Assaad.jpg" alt="">
               <div>
