Add Arturo's twitter

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -145,13 +145,13 @@
 
         <ul class="people">
           <li>
-            <div>
-              <img src="/images/roledrinks-inverted.png" alt="">
+            <a href="https://twitter.com/slartu">
+              <img src="/images/attendees/Arturo-Serna-Leon.jpeg" alt="">
               <div>
                 <span>Arturo Serna Leon</span>
                 <i>Funda</i>
               </div>
-            </div>
+            </a>
           </li>
 
           <li>
