Add route information

--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -227,13 +227,48 @@
       </div>
     </section>
 
-    <section id="children">
+    <section id="location">
       <div class="contain">
-        <h2>Code of Conduct</h2>
+        <h2>How do I get there?</h2>
         <p>
-          Please refer to our
-          <a href="/code-of-conduct.html">Code of Conduct</a> page.
+          Funda’s office is located at Piet Heinkade 167; there’re several ways to get here. The entrance for the event is located
+          on the right side of the building (Jollemanhof). If you see the Amsterdam School of Real Estate keep heading left
+          <span role="img" aria-label="thumbs up">👍</span>.
         </p>
+        <figure>
+          <img src="/images/photos/funda-office.jpg" alt="">
+          <figcaption>Funda office building. Pass the office on the right side and take a left.</figcaption>
+        </figure>
+        <figure>
+          <img src="/images/photos/funda-event-location.jpg" alt="">
+          <figcaption>The event entrance is the right most door in front of you.</figcaption>
+        </figure>
+        <h3>By foot</h3>
+        <p>Funda is about a 15 minute walk from the central station.</p>
+        <ol>
+          <li>Exit the station at IJ-side (the side that overlooks the river IJ)</li>
+          <li>Take a right and keep heading east along De Ruijterkade</li>
+          <li>After you cross a bridge De Ruijterkade transitions into Piet Heinkade</li>
+          <li>The office is located on your left after about 500 meters</li>
+        </ol>
+        <h3>By tram</h3>
+        <ol>
+          <li>At the central station take tram 26 heading towards IJburg</li>
+          <li>Get off at the second stop (Kattenburgerstraat)</li>
+          <li>Cross the street to the left of the tram tracks </li>
+          <li>After crossing the street turn left</li>
+          <li>The office is located on your right after about 200 meters</li>
+        </ol>
+        <h3>By bus</h3>
+        <ol>
+          <li>At the central station get on line 48 heading towards Bornea Eiland</li>
+          <li>Get off at the fourth stop (Jan Schaeferbrug)</li>
+          <li>Cross the street to the left of the bus stop</li>
+          <li>The office is located on your right after about 200 meters</li>
+        </ol>
+        <h3>By cab/car</h3>
+        <p>If you want to come by cab it’s best to point them to Vriesseveem. After you arrive walk towards the water and take
+          a right, event location is now on right with the entrance on the left side.</p>
       </div>
     </section>
 
@@ -248,6 +283,16 @@
             </a>
           </li>
         </ul>
+      </div>
+    </section>
+
+    <section id="children">
+      <div class="contain">
+        <h2>Code of Conduct</h2>
+        <p>
+          Please refer to our
+          <a href="/code-of-conduct.html">Code of Conduct</a> page.
+        </p>
       </div>
     </section>
   </main>
