--- a/in/amsterdam/2018-01-22.html
+++ b/in/amsterdam/2018-01-22.html
@@ -30,13 +30,11 @@
             role=drinks
           </a>
         </h1>
-        <p>We make
-          <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices
-          <span role="img" aria-label="clanging glasses">🍻</span>
-        </p>
+        <p>We make <a href="https://www.w3.org/TR/UNDERSTANDING-WCAG20/intro.html#introduction-fourprincs-head">POUR</a> choices <span role="img" aria-label="clanging glasses">🍻</span></p>
         <p>
-          What on Earth is a role=drinks? It’s an accessibility meetup! The event features lightning talks by accessibility specialist,
-          time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
+          What on Earth is a role=drinks?
+          It’s an accessibility meetup!
+          The event features lightning talks by accessibility specialist, time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
         </p>
       </div>
     </div>
@@ -72,18 +70,18 @@
   </nav>
 
   <main id="main">
+
     <section>
       <div class="contain">
+
         <h2>Details</h2>
         <p>
           <strong>So when is it?</strong> Monday January 22nd , 2018
           <span role="img" aria-label="ok handsign">👌🏾</span>.
           <br>
-          <strong>Cool
-            <span role="img" aria-label="hands raised in celebration">🙌🏼</span> When are we expected?</strong> It runs from 18:00 to 20:00.
+          <strong>Cool <span role="img" aria-label="hands raised in celebration">🙌🏼</span> When are we expected?</strong> It runs from 18:00 to 20:00.
           <br>
-          <strong>Where is it
-            <span role="img" aria-label="thinking face">🤔</span>?</strong>
+          <strong>Where is it <span role="img" aria-label="thinking face">🤔</span>?</strong>
           <a href="https://content.funda.nl/contact">Funda HQ</a>, Piet Heinkade 167, Amsterdam
           <span aria-hidden="true">🍻</span>
           <br>
@@ -92,9 +90,8 @@
         </p>
 
         <p>
-          Sounds good right? If you want to come,
-          <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or
-          <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
+          Sounds good right?
+          If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
         </p>
         <p>All links for people go to their Twitter profile.</p>
       </div>
@@ -102,24 +99,23 @@
 
     <section id="blahblahblah">
       <div class="contain">
+
         <h2>Speakers</h2>
-        <p>If you’re interested in giving a talk
-          <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
+        <p>If you’re interested in giving a talk <a href="mailto:hello@roledrinks.com">let us know</a>!</p>
+        <p>For this event we have Rachel Nabors as our main event.</p>
         <p>
-          For this event we have Rachel Nabors as our main event.
+          From vestibular disorders to seizures, animations can have different impacts on a user's experience.
+          Rachel will give a talk on the accessibility challenges surrounding using animations in user interfaces.
+          (She will also have copies of her eBook, Animation at Work, available for signing!)
         </p>
-        <p>
-          From vestibular disorders to seizures, animations can have different impacts on a user's experience. Rachel will give a talk
-          on the accessibility challenges surrounding using animations in user interfaces. (She will also have copies of
-          her eBook, Animation at Work, available for signing!)
-        </p>
+
         <h3>About Rachel</h3>
         <p>
-          Rachel Nabors has advocated for interaction designers and developers with the W3C, Mozilla, and Microsoft. She founded the
-          <a href="https://slack.animationatwork.com">Animation at Work community</a> and
-          <a href="https://webanimationweekly.com">weekly newsletter</a>. Recently she wrote an
-          <a href="bkaprt.com/animationatwork">A Book Apart book</a> about how to use all these awesome new animation features to make even better user interfaces.
+          Rachel Nabors has advocated for interaction designers and developers with the W3C, Mozilla, and Microsoft.
+          She founded the <a href="https://slack.animationatwork.com">Animation at Work community</a> and <a href="https://webanimationweekly.com">weekly newsletter</a>.
+          Recently she wrote an <a href="bkaprt.com/animationatwork">A Book Apart book</a> about how to use all these awesome new animation features to make even better user interfaces.
         </p>
+
         <h3>Speaker list</h3>
         <p>We’re very grateful to our speakers:</p>
 
@@ -131,8 +127,7 @@
                 <span>Rachel Nabors</span>
               </div>
             </a>
-            <p>Animations and accessibility
-              <span role="img" aria-label="sparkling star">🌟</span>.</p>
+            <p>Animations and accessibility <span role="img" aria-label="sparkling star">🌟</span>.</p>
           </li>
         </ul>
       </div>
@@ -140,6 +135,7 @@
 
     <section id="fellow-drinkers">
       <div class="contain">
+
         <h2>Attendees</h2>
         <p>If you want to yak about accessibility, sign up!</p>
 
@@ -229,11 +225,12 @@
 
     <section id="location">
       <div class="contain">
+
         <h2>How do I get there?</h2>
         <p>
-          Funda’s office is located at Piet Heinkade 167; there’re several ways to get here. The entrance for the event is located
-          on the right side of the building (Jollemanhof). If you see the Amsterdam School of Real Estate keep heading left
-          <span role="img" aria-label="thumbs up">👍</span>.
+          Funda’s office is located at Piet Heinkade 167; there’re several ways to get here.
+          The entrance for the event is located on the right side of the building (Jollemanhof).
+          If you see the Amsterdam School of Real Estate keep heading left <span role="img" aria-label="thumbs up">👍</span>.
         </p>
         <figure>
           <img src="/images/photos/funda-office.jpg" alt="">
@@ -243,6 +240,7 @@
           <img src="/images/photos/funda-event-location.jpg" alt="">
           <figcaption>The event entrance is the right most door in front of you.</figcaption>
         </figure>
+
         <h3>By foot</h3>
         <p>Funda is about a 15 minute walk from the central station.</p>
         <ol>
@@ -251,6 +249,7 @@
           <li>After you cross a bridge De Ruijterkade transitions into Piet Heinkade</li>
           <li>The office is located on your left after about 500 meters</li>
         </ol>
+
         <h3>By tram</h3>
         <ol>
           <li>At the central station take tram 26 heading towards IJburg</li>
@@ -259,6 +258,7 @@
           <li>After crossing the street turn left</li>
           <li>The office is located on your right after about 200 meters</li>
         </ol>
+
         <h3>By bus</h3>
         <ol>
           <li>At the central station get on line 48 heading towards Bornea Eiland</li>
@@ -266,14 +266,18 @@
           <li>Cross the street to the left of the bus stop</li>
           <li>The office is located on your right after about 200 meters</li>
         </ol>
+
         <h3>By cab/car</h3>
-        <p>If you want to come by cab it’s best to point them to Vriesseveem. After you arrive walk towards the water and take
-          a right, event location is now on right with the entrance on the left side.</p>
+        <p>
+          If you want to come by cab it’s best to point them to Vriesseveem.
+          After you arrive walk towards the water and take a right, event location is now on right with the entrance on the left side.
+        </p>
       </div>
     </section>
 
     <section id="thank-you">
       <div class="contain">
+
         <h2>Who paid for all of this?</h2>
         <p>These people have been kind enough to help us run role=drinks:</p>
         <ul class="sponsors">
@@ -288,6 +292,7 @@
 
     <section id="children">
       <div class="contain">
+
         <h2>Code of Conduct</h2>
         <p>
           Please refer to our
@@ -299,24 +304,21 @@
 
   <footer>
     <div class="contain">
-      <p>Part of
-        <a href="http://roledrinks.com">role=drinks</a>.</p>
-      <p>Some things we’ve to say
-        <a href="/privacy.html">about privacy</a>. Please read our
-        <a href="/code-of-conduct.html">Code of Conduct</a> before you attend.</p>
+      <p>Part of <a href="http://roledrinks.com">role=drinks</a>.</p>
+      <p>
+        Some things we’ve to say <a href="/privacy.html">about privacy</a>.
+        Please read our <a href="/code-of-conduct.html">Code of Conduct</a> before you attend.
+      </p>
     </div>
   </footer>
-
 
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120 120" preserveAspectRatio="xMidYMid meet" style="display: none">
     <defs>
       <g id="role-drinks" aria-labelledby="title" aria-describedby="desc" role="img">
         <title id="title">role=drinks</title>
         <desc id="desc">The universal design icon where the man is holding a bottle and a cocktail and some bubbles are coming from his head.</desc>
-        <path d="M120 58C119 26.6 93.4 1 62 0 27.3-1.1-1.1 27.3 0 62c1 31.4 26.6 57 58 58 34.7 1.1 63.1-27.3 62-62zm-7.2 5.4c-1.7 26.4-23 47.7-49.4 49.4C31.5 114.8 5 88.3 7 56.4 8.7 30 30 8.7 56.4 7c31.9-2 58.4 24.5 56.4 56.4z"
-        />
-        <path d="M57.6 15h-.7c-.1.4-.6.8-1.1.8-.4 0-.8-.2-1-.6-21.7 2.4-38.9 20.4-40 42.4-1.3 26.8 20.6 48.7 47.3 47.3 22.9-1.2 41.5-19.8 42.7-42.7 1.5-26.6-20.4-48.6-47.2-47.2zm2.4 2.3c.1 0 .3.1.3.3 0 .1-.1.3-.3.3s-.3-.1-.3-.3c0-.2.2-.3.3-.3zm-.5 2.4c.3 0 .6.3.6.6s-.3.6-.6.6-.6-.3-.6-.6.3-.6.6-.6zM56.7 17c.5 0 .9.4.9.9s-.4.9-.9.9-.9-.4-.9-.9.4-.9.9-.9zm-4.8 14.7c.4-3.8 3.5-6.8 7.2-7.2 5.2-.5 9.5 3.8 9 9-.4 3.8-3.5 6.8-7.3 7.2-5.1.5-9.4-3.8-8.9-9zm43.4 2.1c.3 0 .6.1.8.4l.3-.2.2.1-.3.3c.1.2.2.3.2.5s-.1.4-.2.6l.4.2c.1.1.2.2.1.3-1.4 1.1-8.4 6.2-8.4 6.2 0 .1-.1.1-.1.2 1.4 0 2.1.6 2.6 1.5.4.9.3 3.5-1.9 4.1-.9.2-1.8.4-2.6.6-.1.3-.1.5-.2.7-.1.2 0 .4.2.5.7.5 2.5 1.7 2.3 2.5-.3 1.1-2.3 1.2-4.6.5-1.7-.5-3.5-1.9-3.4-3-3.2.7-6.3 1.3-9.6 2.2-.9.3-2.5 1.6-2.6 2.6-1.6 13 2.3 27.5 4.7 34.6l.6 1.4c.9 2.2.8 4.7-1.4 5.6-.5.2-1 .3-1.5.3-1.7 0-2.7-1-3.4-2.8l-.5-1.3c-1.8-4.6-2.9-9.1-5.3-16.6-.2-.5-.7-1.7-1.2-1.7h-1c-.5 0-1.3 2-1.4 2.5-2.5 7.6-2.9 11.2-4.8 15.8l-.5 1.4c-.7 1.7-1.7 2.8-3.4 2.8-.5 0-1.1-.1-1.5-.3-2.2-.9-2.5-3.3-1.6-5.6l.6-1.4c2.7-6.9 6-21.9 4.9-34.4-.1-1-1.6-2.4-2.6-2.7-3.8-1.1-7.5-1.8-11.4-2.6l1.1 3.1c.1.3-.1.7-.4.8l-2.8.9-2.8 1.1c-.3.1-.7 0-.8-.4l-4.5-12c-.2-.6-.2-1.2.1-1.7l.4-.8c.2-.4.3-.8.2-1.2 0 0-1.2-4.4-1.5-5.9 0-.1-.3 0-.3-.2-.1-.3-.1-.8-.2-1.1-.2-.2-.3-.2-.3-.2-.1-.1-.2 0-.2-.4l1.3-.5 1.3-.5c.3.3.2.3.1.4 0 .1-.1.1-.1.2.1.3.5.7.6 1 .1.1-.2.2-.1.3.6 1.3 2.6 5.5 2.6 5.5.2.4.5.7.9.8l.8.4c.5.2 1 .7 1.2 1.3l.8 2.3c9.2 1.1 16.8 1.3 24.8 1.3 8.5 0 17-.2 26.5-1.5.1-.4.2-.7.2-.9 0 0-2.2-8.5-2.5-10.2 0-.1.1-.3.3-.2l9.7 3.5c.1-.5.5-1 1.1-1z"
-        />
+        <path d="M120 58C119 26.6 93.4 1 62 0 27.3-1.1-1.1 27.3 0 62c1 31.4 26.6 57 58 58 34.7 1.1 63.1-27.3 62-62zm-7.2 5.4c-1.7 26.4-23 47.7-49.4 49.4C31.5 114.8 5 88.3 7 56.4 8.7 30 30 8.7 56.4 7c31.9-2 58.4 24.5 56.4 56.4z" />
+        <path d="M57.6 15h-.7c-.1.4-.6.8-1.1.8-.4 0-.8-.2-1-.6-21.7 2.4-38.9 20.4-40 42.4-1.3 26.8 20.6 48.7 47.3 47.3 22.9-1.2 41.5-19.8 42.7-42.7 1.5-26.6-20.4-48.6-47.2-47.2zm2.4 2.3c.1 0 .3.1.3.3 0 .1-.1.3-.3.3s-.3-.1-.3-.3c0-.2.2-.3.3-.3zm-.5 2.4c.3 0 .6.3.6.6s-.3.6-.6.6-.6-.3-.6-.6.3-.6.6-.6zM56.7 17c.5 0 .9.4.9.9s-.4.9-.9.9-.9-.4-.9-.9.4-.9.9-.9zm-4.8 14.7c.4-3.8 3.5-6.8 7.2-7.2 5.2-.5 9.5 3.8 9 9-.4 3.8-3.5 6.8-7.3 7.2-5.1.5-9.4-3.8-8.9-9zm43.4 2.1c.3 0 .6.1.8.4l.3-.2.2.1-.3.3c.1.2.2.3.2.5s-.1.4-.2.6l.4.2c.1.1.2.2.1.3-1.4 1.1-8.4 6.2-8.4 6.2 0 .1-.1.1-.1.2 1.4 0 2.1.6 2.6 1.5.4.9.3 3.5-1.9 4.1-.9.2-1.8.4-2.6.6-.1.3-.1.5-.2.7-.1.2 0 .4.2.5.7.5 2.5 1.7 2.3 2.5-.3 1.1-2.3 1.2-4.6.5-1.7-.5-3.5-1.9-3.4-3-3.2.7-6.3 1.3-9.6 2.2-.9.3-2.5 1.6-2.6 2.6-1.6 13 2.3 27.5 4.7 34.6l.6 1.4c.9 2.2.8 4.7-1.4 5.6-.5.2-1 .3-1.5.3-1.7 0-2.7-1-3.4-2.8l-.5-1.3c-1.8-4.6-2.9-9.1-5.3-16.6-.2-.5-.7-1.7-1.2-1.7h-1c-.5 0-1.3 2-1.4 2.5-2.5 7.6-2.9 11.2-4.8 15.8l-.5 1.4c-.7 1.7-1.7 2.8-3.4 2.8-.5 0-1.1-.1-1.5-.3-2.2-.9-2.5-3.3-1.6-5.6l.6-1.4c2.7-6.9 6-21.9 4.9-34.4-.1-1-1.6-2.4-2.6-2.7-3.8-1.1-7.5-1.8-11.4-2.6l1.1 3.1c.1.3-.1.7-.4.8l-2.8.9-2.8 1.1c-.3.1-.7 0-.8-.4l-4.5-12c-.2-.6-.2-1.2.1-1.7l.4-.8c.2-.4.3-.8.2-1.2 0 0-1.2-4.4-1.5-5.9 0-.1-.3 0-.3-.2-.1-.3-.1-.8-.2-1.1-.2-.2-.3-.2-.3-.2-.1-.1-.2 0-.2-.4l1.3-.5 1.3-.5c.3.3.2.3.1.4 0 .1-.1.1-.1.2.1.3.5.7.6 1 .1.1-.2.2-.1.3.6 1.3 2.6 5.5 2.6 5.5.2.4.5.7.9.8l.8.4c.5.2 1 .7 1.2 1.3l.8 2.3c9.2 1.1 16.8 1.3 24.8 1.3 8.5 0 17-.2 26.5-1.5.1-.4.2-.7.2-.9 0 0-2.2-8.5-2.5-10.2 0-.1.1-.3.3-.2l9.7 3.5c.1-.5.5-1 1.1-1z" />
       </g>
     </defs>
   </svg>
