--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
         <ol class="👥 🏙">
           <li>
-            <!-- <a href="/in/amsterdam/2018-06-16.html"> -->
+            <a href="/in/amsterdam/2018-06-16.html">
             <div>
               <img src="images/cities/Amsterdam.jpg" alt="">
               <div>
@@ -93,7 +93,7 @@
                 </i>
               </div>
             </div>
-            <!-- </a> -->
+            </a>
           </li>
 
           <!-- <li>
