--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -261,7 +261,7 @@
           <li>Michiel for scouting venues and their work on the website</li>
           <li>All of our attendees for coming out</li>
           <li>Our sponsor, CSSDayConf, for making this all possible</li>
-          <li>Thomans, for his debut as MC</li>
+          <li>Thomas, for his debut as MC</li>
         </ul>
   </main>
 
