--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -135,7 +135,7 @@
         </ul>
         <p>All complaints will be reviewed and investigated and will result in a response that is deemed necessary and appropriate
           to the circumstances. For example: participants that don’t follow the CoC can be removed from the event, banned
-          from future evets, or both. The event team is obligated to maintain confidentiality with regard to the reporter
+          from future events, or both. The event team is obligated to maintain confidentiality with regard to the reporter
           of an incident.
         </p>
         <p>Event organisers who do not follow or enforce the Code of Conduct in good faith may face temporary or permanent repercussions
