Add Hans Grimm as speaker

--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -149,6 +149,15 @@
             </a>
             <p>Stealth accessibility<span role="img" aria-label="Shushing Face">🤫</span>.</p>
           </li>
+          <li>
+            <a href="https://twitter.com/grimmweb">
+              <img src="/images/speakers/Hans.png" alt="">
+              <div>
+                <span>Hans Grimm</span>
+              </div>
+            </a>
+            <p>Down Dangerous A11Y&apos;s - how a11y can be hazardous to your professional health<span role="img" aria-label="Warning sign">⚠️</span>.</p>
+          </li>
         </ul>
       </div>
     </section>
