Correct Thomas' name

--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -193,7 +193,7 @@
             <a href="https://twitter.com/TommieWoef">
               <img src="https://pbs.twimg.com/profile_images/972972709515808769/ZD22T9Pw_400x400.jpg" alt="">
               <div>
-                <span>Thomas Michelsen (MC)</span>
+                <span>Thomas Machielsen (MC)</span>
                 <i>Mirabeau</i>
               </div>
             </a>
