--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -292,6 +292,42 @@
             </a>
           </li>            
             
+          <li>
+            <a href="https://twitter.com/zersiax">
+              <img src="https://pbs.twimg.com/profile_images/562219451274113024/GgpGl3xC_400x400.jpeg" alt="">
+              <div>
+                <span>Florian Beijers</span>
+              </div>
+            </a>
+          </li>   
+
+          <li>
+            <a href="https://twitter.com/Nathanja_vM">
+              <img src="https://pbs.twimg.com/profile_images/858062163054927872/ZALKZhns_400x400.jpg" alt="">
+              <div>
+                <span>Nathanja van Marsbergen</span>
+              </div>
+            </a>
+          </li>   
+
+          <li>
+            <a href="https://twitter.com/gregwhitworth">
+              <img src="https://pbs.twimg.com/profile_images/1005915293296676864/TboHZa2L_400x400.jpg" alt="">
+              <div>
+                <span>Greg Whitworth</span>
+              </div>
+            </a>
+          </li>              
+
+          <li>
+            <a href="https://twitter.com/sweth">
+              <img src="https://pbs.twimg.com/profile_images/564349458205270017/L9UyY4pb_400x400.jpeg" alt="">
+              <div>
+                <span>Sweth</span>
+              </div>
+            </a>
+          </li>              
+            
         </ul>
       </div>
     </section>
