--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -94,6 +94,9 @@
           If you want to come, <a href="https://twitter.com/roledrinks">tell us on Twitter</a> or <a href="mailto:michiel@roledrinks.com">send us an e-mail</a>.
         </p>
         <p>All links for people go to their Twitter profile.</p>
+          
+          <h3>Venue accessibility</h3>
+          <p>The venue itself is wheelchair accessible. While the restrooms itself isn't equipped with guard rails, the venue claims their facilities have been used without issue by wheelchair users.</p>
       </div>
     </section>
 
