--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -34,7 +34,7 @@
         <p>
           What on Earth is a role=drinks?
           It’s an accessibility meetup!
-          The event features lightning talks by accessibility specialist, time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
+          The event features lightning talks by accessibility specialists, time to talk to the speakers and fellow attendees, and more than enough time to grab a drink.
         </p>
       </div>
     </div>
@@ -96,7 +96,7 @@
         <p>All links for people go to their Twitter profile.</p>
           
           <h3>Venue accessibility</h3>
-          <p>The venue itself is wheelchair accessible. While the restrooms itself isn't equipped with guard rails, the venue claims their facilities have been used without issue by wheelchair users.</p>
+          <p>The venue itself is wheelchair accessible. While the restrooms aren't equipped with guard rails, the venue claims their facilities have been used without issue by wheelchair users.</p>
       </div>
     </section>
 
