--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -380,6 +380,16 @@
               </div>
             </li>
 
+          <li>
+            <a href="https://twitter.com/DerSchepp">
+              <img src="https://pbs.twimg.com/profile_images/947554595861037056/FBBpTgtI_400x400.jpg" alt="">
+              <div>
+                <span>Christian Schaefer</span>
+                <i>Working Draft 🎙</i>
+              </div>
+            </a>
+          </li>   
+                        
         </ul>
       </div>
     </section>
