--- a/in/amsterdam/2018-06-16.html
+++ b/in/amsterdam/2018-06-16.html
@@ -399,6 +399,34 @@
               </div>
             </a>
           </li>  
+
+          <li>
+              <div>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Daniela Olaru +1</span>
+                </div>
+              </div>
+            </li>            
+
+          <li>
+              <div>
+                <img src="/images/roledrinks-inverted.png" alt="">
+                <div>
+                  <span>Colin Aarts</span>
+                    <i>Mirabeau</i>
+                </div>
+              </div>
+            </li>              
+
+          <li>
+            <a href="https://twitter.com/jonpearse">
+              <img src="https://pbs.twimg.com/profile_images/686666319471722496/E9rrv1Ho_400x400.jpg" alt="">
+              <div>
+                <span>Jon Pearse</span>
+              </div>
+            </a>
+          </li>              
             
         </ul>
       </div>
