copy adjustments based on collaborator comments

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -90,7 +90,7 @@
           <li>Being respectful of differing viewpoints and experiences</li>
           <li>Also being respectful of the venue - it may be shared with people not involved in the meetup</li>
           <li>Be friendly and patient when being offered constructive criticism</li>
-          <li>Acknowledging, accepting, and being mindful of the fact that not everyone drinks or will drink at the meetup</li>
+          <li>Acknowledging, accepting, and being mindful of the fact that not everyone drinks alcohol or will drink alcohol at the meetup</li>
         </ul>
       </div>
     </section>
@@ -107,7 +107,7 @@
           <li>Advocating for, or encouraging, any of the above behavior</li>
           <li>Sustained disruption of community events, including talks and presentations</li>
           <li>Bringing any sort of weapon to an event</li>
-          <li>Getting drunk or belligerent</li>
+          <li>Getting drunk or hostile</li>
         </ul>
       </div>
     </section>
